--- a/project2.html
+++ b/project2.html
@@ -57,7 +57,7 @@
                 <h1><em class="abbreviation">R</em>eturn</h1>
                 <h1>An alternative to euthanasia</h1>
               </div>
-                <a class="button" href="https://invis.io/4TGU1XQJ8UP" target="_blank">VIEW PROTOTYPE</a>
+                <a class="button" href="https://invis.io/BCP16NHQ97J" target="_blank">VIEW PROTOTYPE</a>
             </li>
           </ul>
       </section>
@@ -69,12 +69,12 @@
           <!-- What is virtBox -->
           <section class ="whatIs">
             <h2>What is TNRHumane?</h2>
-            <p>TNRHumane is a mobile application that allows users to report homeless cat sighting
+            <p>TNRHumane is a mobile application that allows users to report homeless cats
               and alert volunteers or animal organizations to come and Trap, Neuter, and Return feral cats
               to its environment. The app will help find homes for abandoned animals,
-              provide food/medical care, and act as a humane solution to reduce feral cats overpopulation.
-              It also serves as a social platform for local caretakers
-              to connect and form a community.</p>
+              provide food/medical care, connect caretakers through social media feature,
+              and act as a humane solution to reduce feral cats overpopulation.
+              </p>
               <div class="rolesTools">
                 <ul class="roles">
                  <li class="title1">Design Roles</li>
@@ -100,7 +100,7 @@
            <section class ="overview">
             <h2>OVERVIEW</h2>
             <p>Homeless cats multiply quickly in the wild.
-              A pair of unfixed cat can multiply up to 32 cats within 16 months in an apartment complex alone.
+              A pair of unfixed cat can multiply up to 32 cats within 16 months.
               While many often feed them, others
               see them as a nuisance.
               Thus, creating problems such as, animosity towards homeless cats and feeders,
@@ -322,7 +322,7 @@
                    <div class="logo-container">
                      <img src="imagesUpdated/iconsLogos/pawpular.png" alt="StrayGlobe logo">
                    </div>
-                    <p>Pawpular is a social media platform for pet owners to share photos of their pets such as
+                    <p><em class="bold">Pawpular</em> is a social media platform for pet owners to share photos of their pets such as
                       dogs, cats, reptiles, birds, aquatic animals, mammals, etc.
                       The platform UI is very similar to Facebook and Instagram.
                       Pawpular has its own growing community in the dogs and cats categories,
@@ -333,7 +333,7 @@
                    <div class="logo-container">
                      <img src="imagesUpdated/iconsLogos/strayglobe.png" alt="StrayGlobe logo">
                    </div>
-                    <p>StrayGlobe is a one-of-its-kind mobile app that let user report stray animals.
+                    <p><em class="bold">StrayGlobe</em> is a one-of-its-kind mobile app that let user report stray animals.
                       The app was developed in India and their map works worldwide.
                       It has no support for interactivity between users and volunteers.
                       Because the app works worldwide, the chances for someone in the U.S to use it to
@@ -345,7 +345,7 @@
                    <div class="logo-container">
                      <img src="imagesUpdated/iconsLogos/aspca.png" alt="ASPCA logo">
                    </div>
-                    <p>ASPCA is one of the few animal welfare organizations that developed a mobile app.
+                    <p><em class="bold">ASPCA</em> is one of the few animal welfare organizations that developed a mobile app.
                       ASPCA’s goal is to inform pet owners how to prepare for disasters.
                       They also encourage users to take actions by donating or sign petitions for animal rights.
                       Other services include storing pet’s health record
@@ -431,7 +431,7 @@
                  <li>Donate</li>
                 </ul>
                   <div class="link">
-                   <a href="https://docs.google.com/spreadsheets/d/1oTafSeEBODA5xzJNiuCxOymvtqcSxzgtNN2m1EJklQo/edit?usp=sharing" target="_blank">VIEW ALL USER STORIES</a>
+                   <a href="https://docs.google.com/spreadsheets/d/1pHYmO3EnOqFk56BqUVu0qm8a3xbd_Ajn8J1m20Jp5VU/edit?usp=sharing" target="_blank">VIEW ALL USER STORIES</a>
                   </div>
               </section>
              </section>
@@ -503,6 +503,10 @@
                    I decided to use a picture of a stray cat that I’ve helped, this way,
                    I could realistically portray his face shape.
                   The logo then paired with a catchphrase and typeface.</P>
+
+                  <div class="link">
+                   <a href="https://www.figma.com/file/FH7g1jK4aULbGs7qZLtHNx8p/Solo-Project?node-id=0%3A1" target="_blank">VIEW SKETCHES</a>
+                  </div>
              </section>
             </div>
            </div>
@@ -683,7 +687,7 @@
            <section class="usabilityTests2">
              <h3>USABILITY TEST ROUND 2</h3>
               <p>This iteration then used to perform another usability tests:
-                1 recorded remote test and a Maze test (14 - 21 participants)</p>
+                1 recorded remote test and a <em class="bold">Maze</em> test (14 - 21 participants)</p>
                <br>
                <p>Overall, participants had the most problem with the 1st task,
                  causing many to give up on the rest of the test.
@@ -773,7 +777,7 @@
                 This caused confusion as they did not know what they are doing, its
                 purpose, and how they got to the screen they are at.  </P>
            <div class="link">
-             <a href="https://invis.io/4TGU1XQJ8UP" target="_blank">VIEW PROTOTYPE</a>
+             <a href="https://invis.io/BCP16NHQ97J" target="_blank">VIEW PROTOTYPE</a>
            </div>
          </section>
        </div>
