img holder until resize original img

--- a/project2.html
+++ b/project2.html
@@ -371,7 +371,7 @@
               <section class="col"> <!-- to wrap aound 3 col personas -->
                   <!-- PERSONA 1 -->
                   <article class="persona1">
-                    <div class="avatar"><img class="avatar1" src="imagesUpdated/TNRProject/kara.jpg" alt="Kara M"></div>
+                    <div class="avatar"><img class="avatar1" src="imagesUpdated/karaM.jpg" alt="Kara M"></div>
                      <h4 class="name">Kara M.</h4>
                       <p class="quote">“I’ll prob use the report feature the most”</p>
                        <ul>
@@ -382,7 +382,7 @@
                   </article>
                   <!-- PERSONA 2 -->
                   <article class="persona2">
-                    <div class="avatar"><img class="avatar2" src="imagesUpdated/TNRProject/sharon.jpg" alt="Hannah A"></div>
+                    <div class="avatar"><img class="avatar2" src="imagesUpdated/hannahA.jpg" alt="Hannah A"></div>
                      <h4 class="name">Sharon B.</h4>
                       <p class="quote">“I prefer to work as alone rather than working with an organization”</p>
                        <ul>
@@ -394,7 +394,7 @@
                   </article>
                   <!-- PERSONA 3 -->
                   <article class="persona3">
-                    <div class="avatar"><img class="avatar3" src="imagesUpdated/TNRProject/kevin.jpg" alt="Sean"></div>
+                    <div class="avatar"><img class="avatar3" src="imagesUpdated/seanM.jpg" alt="Sean"></div>
                       <h4 class="name">Kevin S.</h4>
                        <p class="quote">“I’d like a platform to connect with others so I don’t feel alone”</p>
                         <ul>
