--- a/project2.html
+++ b/project2.html
@@ -69,7 +69,7 @@
           <!-- What is virtBox -->
           <section class ="whatIs">
             <h2>What is TNRHumane?</h2>
-            <p>TNRHumane is a mobile application that allows users to report homeless cats
+            <p>TNRHumane is an Android mobile application that allows users to report homeless cats
               and alert volunteers or animal organizations to come and Trap, Neuter, and Return feral cats
               to its environment. The app will help find homes for abandoned animals,
               provide food/medical care, connect caretakers through social media feature,
@@ -100,10 +100,10 @@
            <section class ="overview">
             <h2>OVERVIEW</h2>
             <p>Homeless cats multiply quickly in the wild.
-              A pair of unfixed cat can multiply up to 32 cats within 16 months.
+              A pair of unfixed catscan multiply up to 32 cats within 16 months.
               While many often feed them, others
               see them as a nuisance.
-              Thus, creating problems such as, animosity towards homeless cats and feeders,
+              Thus, creating problems such as: animosity towards homeless cats and feeders,
               risk of human-transmitted diseases, risk of animal abuse, kittens born suffer
               and die in the wild.
               In order to ensure animal welcare, the community is facing the following problems:</p>
@@ -170,7 +170,7 @@
                    <img class="sad" src="imagesUpdated/iconsLogos/frown.svg" alt="sad face">
                  </li>
                  <li class="prob">
-                   <em class="bold-prob">Problem:</em> Ineffective of keep track of homeless cats health records.
+                   <em class="bold-prob">Problem:</em> Unable to keep track of homeless cat health records.
                  </li>
                  <li>
                     <img class="happy" src="imagesUpdated/iconsLogos/smile.svg" alt="happy face">
@@ -289,7 +289,7 @@
                        <li>
                          <div class="data-content">
                           <h4>56%</h4>
-                           <p>chose to feed it and care for the animal when turned away</p>
+                           <p>chose to feed and care for the animal when turned away</p>
                          </div>
                        </li>
                        <li>
@@ -305,7 +305,7 @@
                          <li>TNR program is still very foreign to many</li>
                          <li>More are willing to help homeless cats so my app design will gear towards animal advocates</li>
                          <li>Most users have never heard of the program unless they are actively involved in an organization</li>
-                         <li>organizations often don’t promote other programs to the public other than that they help adopt out animals</li>
+                         <li>Organizations often don’t promote other programs to the public other than that they help adopt out animals</li>
                      </ul>
                        <div class="link">
                          <a href="https://docs.google.com/document/d/1ySa5c_4K706H76RQKiQES4JiZtsTrjzfG8SXwGZfs4o/edit?usp=sharing" target="_blank">VIEW DETAILED ANALYSIS</a>
@@ -322,7 +322,8 @@
                    <div class="logo-container">
                      <img src="imagesUpdated/iconsLogos/pawpular.png" alt="StrayGlobe logo">
                    </div>
-                    <p><em class="bold">Pawpular</em> is a social media platform for pet owners to share photos of their pets such as
+                    <p><em class="bold">Pawpular</em> is a social media platform for pet owners to
+                      share photos of their pets such as
                       dogs, cats, reptiles, birds, aquatic animals, mammals, etc.
                       The platform UI is very similar to Facebook and Instagram.
                       Pawpular has its own growing community in the dogs and cats categories,
@@ -333,9 +334,10 @@
                    <div class="logo-container">
                      <img src="imagesUpdated/iconsLogos/strayglobe.png" alt="StrayGlobe logo">
                    </div>
-                    <p><em class="bold">StrayGlobe</em> is a one-of-its-kind mobile app that let user report stray animals.
+                    <p><em class="bold">StrayGlobe</em> is a one-of-its-kind mobile app
+                      that let user report stray animals.
                       The app was developed in India and their map works worldwide.
-                      It has no support for interactivity between users and volunteers.
+                      It has no support for interactivity among users.
                       Because the app works worldwide, the chances for someone in the U.S to use it to
                       report a stray animal and actually have someone who knows about StrayGlobe to come help is
                       extremely low.
@@ -470,7 +472,6 @@
                  <p>I then used these wireframes to performed usability tests using Maze.
                    There were 16 participants.</p>
                    <h6>Users were asked to perform the followings:</h6>
-                   <br>
                        <p><em class="bold">Task 1: </em> Go through the tutorial and report a stray </em>
                        <p><em class="bold">Task 2: </em> Create an account </p>
                        <p><em class="bold">Task 3: </em> Set up recurring payment </p>
@@ -575,12 +576,11 @@
            <!-- display slideshow in mobile -->
              <section class="slideShow">
                 <ul class="slides">
-                  <h4 class="slides-bg">Locating donation receipts</h4>
+                  <li class="slides-bg"><h4>Locating donating receipts</h4></li>
                   <li>
-                    <img src="imagesUpdated/TNRProject/receiptOpA.png" alt="Menu preference A">
+                    <img src="imagesUpdated/TNRProject/receiptOp.png" alt="Receipt preference">
                   </li>
                   <li>
-                    <img src="imagesUpdated/TNRProject/receiptOpB.png" alt="Menu preference B">
                     <h5>65% picked option B</h5>
                       <p>I decided to test this element because while conducting usability test,
                         participant hesitated when  locating payment information.
@@ -588,10 +588,9 @@
                   </li>
                   <div class="top-g2"><li class="slides-bg"><h4>Posting method</h4></li></div>
                   <li>
-                    <img src="imagesUpdated/TNRProject/postOpA.png" alt="Add preference A">
+                    <img src="imagesUpdated/TNRProject/postingOp.png" alt="Posting preference">
                   </li>
                   <li class="bottom-g2">
-                    <img src="imagesUpdated/TNRProject/postOpB.png" alt="Add preference B">
                     <h5>68% participants picked option B</h5>
                       <p>I decided to picked option B, however, while double checking with the
                         Material Guidelines, it was recommended to use floating button with caution
@@ -602,10 +601,9 @@
                   </li>
                   <li class="slides-bg"><h4>Image vs Illustration</h4></li>
                   <li>
-                    <img src="imagesUpdated/TNRProject/pictureOpA.png" alt="Icons preference A">
+                    <img src="imagesUpdated/TNRProject/pictureOp.png" alt="Picture preference">
                   </li>
                   <li>
-                    <img src="imagesUpdated/TNRProject/pictureOpB.png" alt="Icons preference B">
                     <h5>61% picked option B</h5>
                       <p>The responses between these alternatives were very competitive.
                         The results proved to be statistically significant.
