--- a/project2.html
+++ b/project2.html
@@ -146,6 +146,7 @@
                     </li>
                  </ul>
                  <img class="solscr sm" src="imagesUpdated/TNRProject/socialFeature.png" alt="dashboard link view">
+
                </section>
 
                <!-- problem and solution group 2 for DESKTOP -->
@@ -370,7 +371,7 @@
                   <p>Now it is time to understand the user’s  perspectives, I interviewed 3 potential users.</p>
               </section>
             </div>
-              <section class="col"> <!-- to wrap aound 3 col personas -->
+              <section class="col">
                   <!-- PERSONA 1 -->
                   <article class="persona1">
                     <div class="avatar"><img class="avatar1" src="imagesUpdated/karaM.jpg" alt="Kara M"></div>
@@ -463,8 +464,8 @@
             <p class="grid4-content">I created wireframes to connect the concepts, user flows, and branding together on paper,
               then digitized them using <em class="bold">Figma</em>. </p>
            </div>
-             <div class="mockupSketches"></div> <!-- need background image of sketches in css -->
-             <div class="digitalSketches"></div> <!-- need background image of mockups in css -->
+             <div class="mockupSketches"></div>
+             <div class="digitalSketches"></div>
            <!-- 3.1: USABILITY TESTS -->
            <div class="grid2">
              <section class ="usabilityTests">
@@ -511,7 +512,14 @@
              </section>
             </div>
            </div>
-             <section class="mindMapping"></section> <!-- need background image of mindmapping in css -->
+           <div class="grid-bg">
+             <div class="grid2">
+               <section class="Logo">
+                 <div class="pencilLogo"></div>
+                 <div class="digitalLogo"></div>
+               </section>
+             </div>
+           </div>
            <!-- 3.3: BRANDING IDENTITY -->
            <div class="grid-bg">
             <div class="grid2">
