add logo sketches picture

--- a/project2.html
+++ b/project2.html
@@ -512,14 +512,10 @@
              </section>
             </div>
            </div>
-           <div class="grid-bg">
-             <div class="grid2">
-               <section class="Logo">
-                 <div class="pencilLogo"></div>
-                 <div class="digitalLogo"></div>
+              <section class="Logo">
+                <img src="imagesUpdated/TNRProject/sketches.png" alt="logo pencil sketches">
+                <img src="imagesUpdated/TNRProject/digitalLogo.png" alt="digital sketches">
                </section>
-             </div>
-           </div>
            <!-- 3.3: BRANDING IDENTITY -->
            <div class="grid-bg">
             <div class="grid2">
