--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <li class="miniScreen"><img src="imagesUpdated/TNRProject/TNRHumane.png" alt="TNRHumane screenshot"></li>
         <li class="description-content2">
           <h2>TNRHumane</h2>
-          <p>A mobile application that partner with animal organizations and volunteers to help
+          <p>An Android mobile application that partner with animal organizations and volunteers to help
             humanely reduce homeless cats overpopulation through <em class="abbreviation">Trap, Neuter, Return</em> program
             by allowing users to report stray cats sighting.
             </p>
