--- a/project2.html
+++ b/project2.html
@@ -32,7 +32,7 @@
                 </span>
 
                 <ul>
-                  <li><a href="project1.html">PROJECTS</a></li>
+                  <li><a href="index.html#projects">PROJECTS</a></li>
                   <li><a href="about.html">ABOUT</a></li>
                   <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
                 </ul>
