semi final edit

--- a/project2.html
+++ b/project2.html
@@ -100,13 +100,19 @@
            <section class ="overview">
             <h2>OVERVIEW</h2>
             <p>Homeless cats multiply quickly in the wild.
-              A pair of unfixed catscan multiply up to 32 cats within 16 months.
+              A pair of unfixed cats can multiply up to 32 cats within 16 months.
               While many often feed them, others
               see them as a nuisance.
-              Thus, creating problems such as: animosity towards homeless cats and feeders,
-              risk of human-transmitted diseases, risk of animal abuse, kittens born suffer
-              and die in the wild.
-              In order to ensure animal welcare, the community is facing the following problems:</p>
+              Thus, creating problems such as:
+
+                <ul>
+                  <li>Animosity towards homeless cats and feeders </li>
+                  <li>Risk of human-transmitted diseases </li>
+                  <li>Risk of animal abuse </li>
+                  <li>Kittens born suffer and die in the wild.</li>
+                </ul>
+                <p>In order to ensure animal welfare, the community is facing the following problems:</p>
+
               </section>
            </div>
            <!-- problem and solution group 1 -->
@@ -116,7 +122,7 @@
                    <img class="sad" src="imagesUpdated/iconsLogos/frown.svg" alt="sad face">
                  </li>
                  <li class="prob">
-                   <em class="bold-prob">Problem:</em> Unable to keep track of homeless cat population.
+                   <em class="bold-prob">Problem:</em> Unable to keep track of the homeless cat population.
                  </li>
                  <li>
                     <img class="happy" src="imagesUpdated/iconsLogos/smile.svg" alt="happy face">
@@ -225,9 +231,9 @@
                     <li>Wireframes</li>
                     <li>Usability tests</li>
                     <li>Branding & Identity</li>
-                    <li>Logo process</li>
+                    <li>Logo sketches</li>
                     <li>Color & Style Guide</li>
-                    <li>High fidelity mockup v1</li>
+                    <li>High fidelity v1</li>
                   </ul>
                </article>
                <!-- PHASE 4 -->
@@ -240,9 +246,8 @@
                   <ul>
                     <li>Preference tests</li>
                     <li>2nd iteration</li>
-                    <li>3rd iteration</li>
                     <li>Usability tests v2</li>
-                    <li>Finishing touches</li>
+                    <li>3rd iteration</li>
                   </ul>
                </article>
              </section>
@@ -284,7 +289,7 @@
                        <li>
                          <div class="data-content">
                           <h4>59%</h4>
-                           <p>decided to take actions when face a stray</p>
+                           <p>decided to take actions when facing a stray</p>
                          </div>
                        </li>
                        <li>
@@ -378,7 +383,7 @@
                      <h4 class="name">Kara M.</h4>
                       <p class="quote">“I’ll prob use the report feature the most”</p>
                        <ul>
-                         <li>A cat owner, not involved in animal welfare but is aware of TNR program</li>
+                         <li>A cat owner, not involved in animal welfare but is aware of the TNR program</li>
                          <li>Would help report stray cats but not interested in being involved in the community</li>
                          <li>She feels that organizations are not doing a good job of promoting themselves</li>
                        </ul>
@@ -389,7 +394,7 @@
                      <h4 class="name">Sharon B.</h4>
                       <p class="quote">“I prefer to work as alone rather than working with an organization”</p>
                        <ul>
-                          <li>A DIY rescuers to find homes for friendly felines while fixing and feeding local ferals</li>
+                          <li>DIY rescuers to find homes for friendly felines while fixing and feeding local ferals</li>
                           <li>Feels that animal organizations are unorganized and only reach out to them if she needs better resources</li>
                           <li>Has limited resources and financial means to help more cats</li>
                           <li>People often have animosity towards homeless cats</li>
@@ -409,9 +414,10 @@
              </section>
              <section class="takeaway2">
               <h6>Takeaways</h6>
-               <p>All three interviewees have heard of TNR program. The common problem is not
-                 being able to connect with others. They seems to have a an independent
-                 mentality when it comes to rescues. This limit their resources and connection. </p>
+               <p>All three interviewees have heard of the TNR program.
+                 The common problem is not being able to connect with others.
+                 They seem to have an independent mentality when it comes to rescues.
+                 This limits their resources and connection. </p>
                   <div class="link">
                     <a href="https://www.figma.com/file/FH7g1jK4aULbGs7qZLtHNx8p/Solo-Project?node-id=169%3A21" target="_blank">VIEW DETAILED PERSONAS</a>
                   </div>
@@ -470,15 +476,15 @@
            <div class="grid2">
              <section class ="usabilityTests">
                <h3>USABILITY TESTS</h3>
-                 <p>I then used these wireframes to performed usability tests using Maze.
+                 <p>I then used these wireframes to performed usability tests using <em class="bold">Maze</em>.
                    There were 16 participants.</p>
                    <h6>Users were asked to perform the followings:</h6>
                        <p><em class="bold">Task 1: </em> Go through the tutorial and report a stray </em>
                        <p><em class="bold">Task 2: </em> Create an account </p>
-                       <p><em class="bold">Task 3: </em> Set up recurring payment </p>
+                       <p><em class="bold">Task 3: </em> Set up a recurring payment </p>
                        <p><em class="bold">Task 4: </em> Turn off auto payment </p>
                        <p><em class="bold">Task 5: </em> View nearby stray cats reports </p>
-                       <p><em class="bold">Task 6: </em> Add a report to to-do list </p>
+                       <p><em class="bold">Task 6: </em> Add a report to a to-do list </p>
                        <p><em class="bold">Task 7: </em> Update report status </p>
                    <h6>I found that:</h6>
                      <ul>
@@ -537,7 +543,7 @@
                  <p>Colorwise, I went with the classic hue that represents compassion.
                    Red and pink were my top choices. I went with pink because using red as
                    primary color could be problematic. For example, red usually associated
-                   with error. </P>
+                   with an error. </P>
                  <br>
                  <P>As for typeface, I picked Prompt. It is user-friendly and easy to see.
                    Moreover, Google Application recently updated their typefaces.
@@ -551,7 +557,7 @@
                 <img src="imagesUpdated/TNRProject/pink.png" alt="color">
              </section>
                <div class="download-style">
-                 <a href="imagesUpdated/virtbox-styleguide.png" download="virtBox style guide">DOWNLOAD STYLE GUIDE</a>
+                 <a href="imagesUpdated/TNRProject/styleGuide.png" download="TNRHumane style guide">DOWNLOAD STYLE GUIDE</a>
                </div>
            <div class="grid-bg">
             <div class="grid2">
@@ -565,7 +571,7 @@
              <section class="hifi1"></section>
            </div>
              <div class="download">
-               <a href="imagesUpdated/hifiv1.png" download="Hifi version 1">DOWNLOAD HI-FI MOCKUP</a>
+               <a href="https://www.figma.com/file/FH7g1jK4aULbGs7qZLtHNx8p/Solo-Project?node-id=444%3A13612" target="_blank">VIEW HI-FI MOCKUP</a>
              </div>
            <div class="grid2">
              <!-- PHASE 4: TESTINGS -->
@@ -596,12 +602,14 @@
                   </li>
                   <li class="bottom-g2">
                     <h5>68% participants picked option B</h5>
-                      <p>I decided to picked option B, however, while double checking with the
-                        Material Guidelines, it was recommended to use floating button with caution
-                        when navigation options is present. Since my navigation tab included words,
-                        I thought it would be crowded with the floating button. Moreover, users are more
-                        likely to keep in touch with events and TNR deals than writing a post. Thus, I gear
-                        the screen’s focus toward posts from organizations than for user to write posts.</p>
+                      <p>I decided to pick option B, however, while double checking with
+                        the Material Guidelines, it was recommended to use a floating button
+                        with caution when navigation options are present.
+                        Since my navigation tab included words, I thought it would be
+                        crowded with the floating button. Moreover, users are more likely
+                        to keep in touch with events and TNR deals than writing a post.
+                        Thus, I gear the screen’s focus toward posts from organizations
+                        than for a user to write posts</p>
                   </li>
                   <li class="slides-bg"><h4>Image vs Illustration</h4></li>
                   <li>
@@ -714,7 +722,7 @@
         <div class="grid2">
           <section class="thirdIteration">
            <h3>3RD ITERATION</h3>
-            <p>Round 3 of iteration focus on visual improvements for the homepage.</p>
+            <p>Round 3 of iteration focus on functionality improvement on some screens.</p>
           </section>
         </div>
           <section class="v3">
