fix links to index projects section

--- a/project1.html
+++ b/project1.html
@@ -31,7 +31,7 @@
                 </span>
 
                 <ul>
-                  <li><a href="project1.html">PROJECTS</a></li>
+                  <li><a href="index.html#projects">PROJECTS</a></li>
                   <li><a href="about.html">ABOUT</a></li>
                   <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
                 </ul>
@@ -40,7 +40,7 @@
 
           <div id="side-menu" class="side-nav">
               <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
-              <li><a href="project1.html#projects" class="portfolio">PROJECTS</a></li>
+              <li><a href="index.html#projects" class="portfolio">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
               <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
           </div>
