--- a/project2.html
+++ b/project2.html
@@ -41,7 +41,7 @@
 
           <div id="side-menu" class="side-nav">
               <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
-              <li><a href="project1.html" class="portfolio">PROJECTS</a></li>
+              <li><a href="index.html#projects" class="portfolio">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
               <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
           </div>
