add 3rd project to home page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
   <!-- Font awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
@@ -67,7 +68,7 @@
   </header>
   <main class="container">
     <!-- PROJECT 2 -->
-    <section id="projects" class="project2">
+    <section class="project2">
       <ul class="grid3">
         <li class="miniScreen"><img src="imagesUpdated/TNRProject/TNRHumane.png" alt="TNRHumane screenshot"></li>
         <li class="description-content2">
@@ -95,6 +96,19 @@
           </li>
         </ul>
       </section>
+      <!-- PROJECT 3 -->
+      <section class="project3">
+        <ul class="grid3">
+          <li class="miniScreen"><img src="imagesUpdated/emailProject/email.png" alt="Email screenshot"></li>
+          <li class="description-content2 varela">
+            <h2>Email Design</h2>
+            <p>An email template created during my internship that train home improvement
+              merchants on how to reach out to their customers.
+              </p>
+              <a class="button">CASE STUDY COMING SOON</a>
+          </li>
+          <li class="bigScreen"><img src="imagesUpdated/emailProject/email.png" alt="Email screenshot"></li>
+        </section>
   </main>
   <footer> <!-- background -->
       <section class="footer-content">
