--- a/index.html
+++ b/index.html
@@ -99,15 +99,26 @@
       <!-- PROJECT 3 -->
       <section class="project3">
         <ul class="grid3">
-          <li class="miniScreen"><img src="imagesUpdated/emailProject/email.png" alt="Email screenshot"></li>
-          <li class="description-content2 varela">
-            <h2>Email Design</h2>
-            <p>An email template created during my internship that train home improvement
-              merchants on how to reach out to their customers.
-              </p>
-              <a class="button">CASE STUDY COMING SOON</a>
+          <li class="miniScreen"><img src="imagesUpdated/timelineProject/mobileTimeline.png" alt="Timeline screenshot"></li>
+          <li class="description-content2">
+            <h2 class="longTitle">Intranet Timeline</h2>
+            <p>A responsive timeline designed for GreenSky, LLC SharePoint intranet.</p>
+              <a class="button" href="project3.html">VIEW CASE STUDY</a>
           </li>
-          <li class="bigScreen"><img src="imagesUpdated/emailProject/email.png" alt="Email screenshot"></li>
+          <li class="bigScreen"><img src="imagesUpdated/timelineProject/timeline.png" alt="Timeline screenshot"></li>
+        </section>
+        <!-- PROJECT 4 -->
+        <section class="project4">
+          <ul class="grid2">
+            <li class="screen"><img src="imagesUpdated/emailProject/email.png" alt="email screenshot"></li>
+            <li class="bigScreen"><img src="imagesUpdated/emailProject/email.png" alt="email screenshot"></li>
+            <li class="description-content1">
+              <h2 class="longTitle">Email Template</h2>
+                <p>An email template created during my internship that train home improvement
+                  merchants on how to reach out to their customers.</p>
+                <a class="button" href="project4.html">VIEW CASE STUDY</a>
+            </li>
+          </ul>
         </section>
   </main>
   <footer> <!-- background -->
@@ -146,7 +157,6 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'UA-125811108-1');
     </script>
 
