--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
             </li>
           </ul>
         </section>
+        <!-- UI Challenge -->
+        <section class="UIChallenge"> <!-- background -->
+          <div class="grid1 UICHallenge">
+                <h2 class="longTitle">Daily UI Challenge coming soon</h2>
+          </div>
+        </section>
   </main>
   <footer> <!-- background -->
       <section class="footer-content">
