--- a/project3.html
+++ b/project3.html
@@ -52,9 +52,9 @@
            <!-- OVERVIEW -->
            <section class ="overview">
               <h2>OVERVIEW</h2>
-              <p>This is one of the project I worked on during my internship at GreenSky, LLC. I had a chance to work with a SharePoint
-                developer to help with the redesign their intranet site.
-                I was tasked to create a responsive timeline for their "History" page. The project was designed using the company's style guide to enfored
+              <p>This is one of the projects I worked on during my internship at GreenSky, LLC. I had a chance to work with a SharePoint
+                developer to help with redesign their intranet site.
+                I was tasked to create a responsive timeline for their "History" page giving the limitations of SharePoint. The project was designed using the company's style guide to enforced
                 the ADA compliance guideline. It is currently still under production.
               </section>
            </div>
