--- a/project4.html
+++ b/project4.html
@@ -50,19 +50,17 @@
     </header>
     <main>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
         <div class="grid2">
            <!-- OVERVIEW -->
            <section class ="overview">
               <h2>OVERVIEW</h2>
-              <p>This is one of the project I worked on during my internship at GreenSky, LLC. I had a chance to work with a SharePoint
-                developer to help with the redesign their intranet site.
-                I was tasked to create a responsive timeline for their "History" page. The project was designed using the company's style guide to enfored
-                the ADA compliance guideline. It is currently still under production.
+              <p>This is an email template created during my internship that trains home improvement merchants on how to reach out to their customers.
+                I was giving a list of contents for the email template and was tasked to create a responsive layout that would highlight important data for merchants to reach out to their customers. The email template includes the customer's contact information, services they are searching for,
+                and a  sample script for merchants to reach out to their potential customers. 
               </section>
            </div>
            <div class="grid2">
-             <img class="email" src="imagesUpdated/emailProject/email.png" alt="Email Template screenshot">
+             <img class="email" src="imagesUpdated/emailProject/email.png" alt="email screenshot">
            </div>
 
       </main>
